cmake_minimum_required(VERSION 3.5)

project(PrometheusEndlineTester LANGUAGES CXX)

#########################################
## SubProjects
add_subdirectory(PrometheusEndlineTesterLib)
#########################################

#########################################
## SubProjects
add_subdirectory(PrometheusEndlineTester)
#########################################
